<RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/BackgroundColor"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="163dp"
            android:layout_marginTop="89dp"
            android:text="@string/hello_"
            android:textAppearance="@style/welcome_bac"
            android:textFontWeight="600"
            android:layout_alignParentStart="true"
            tools:targetApi="p"
            android:layout_marginStart="163dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="104dp"
            android:layout_marginTop="126dp"
            android:gravity="top"
            android:text="@string/please_signup"
            android:textAppearance="@style/please_sign"
            android:layout_alignParentStart="true"
            android:layout_marginStart="104dp" />

        <EditText
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="300dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="#63666D"
            android:background="@drawable/username_bo"
            android:paddingLeft="15dp"
            tools:ignore="RtlSymmetry"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:paddingStart="15dp" />

        <EditText
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="194dp"
            android:background="@drawable/username_bo"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="#63666D"
            android:textColorHint="#63666D"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="40dp"
            android:paddingStart="15dp" />

        <!-- E-mail -->

        <EditText
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="247dp"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#63666D"
            android:textColorHint="#63666D"
            android:background="@drawable/username_bo"
            android:paddingLeft="15dp"
            tools:ignore="RtlSymmetry"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:paddingStart="15dp" />
        <!-- Retype Password -->

        <!-- DoB -->

        <!-- I accept the -->
        <!-- Terms Of Use -->
        <EditText
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="353dp"
            android:background="@drawable/username_bo"
            android:hint="@string/retype_pass"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="#63666D"
            android:textColorHint="#63666D"
            tools:ignore="RtlSymmetry"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:paddingStart="15dp" />

        <EditText
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="406dp"
            android:background="@drawable/username_bo"
            android:hint="@string/dob"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:textColor="#63666D"
            android:textColorHint="#63666D"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:paddingStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="450dp"
            android:gravity="top"
            android:text="@string/i_accept_th"
            android:textAppearance="@style/don_t_have_"
            android:layout_alignParentStart="true"
            android:layout_marginStart="79dp" />

        <!-- Privacy Policy -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="450dp"
            android:gravity="top"
            android:text="@string/terms_of_us"
            android:textAppearance="@style/terms_of_us"
            android:layout_alignParentStart="true"
            android:layout_marginStart="158dp" />

        <!-- google -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="450dp"
            android:gravity="top"
            android:text="@string/privacy_pol"
            android:textAppearance="@style/terms_of_us"
            android:layout_alignParentStart="true"
            android:layout_marginStart="265dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="249dp"
            android:layout_marginTop="450dp"
            android:gravity="top"
            android:text="@string/some_id"
            android:textAppearance="@style/don_t_have_"
            android:layout_alignParentStart="true"
            android:layout_marginStart="249dp" />

        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="550dp"
            android:background="@drawable/google"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp" />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="560dp"
            android:background="@drawable/googlelogo" />

        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="550dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/google"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp" />

        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="560dp"
            android:layout_marginRight="91dp"
            android:background="@drawable/facebooklogo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="91dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="480dp"
            android:backgroundTint="#546DF6"
            android:onClick="signUpButton"
            android:text="@string/sign_up"
            tools:ignore="UsingOnClickInXml"
            tools:targetApi="lollipop" />
</RelativeLayout>

