<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/BackgroundColor"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--welcome back text-->

    <!--please sign in to your account text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="88dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:textFontWeight="600"
        tools:targetApi="p"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="131dp"
        android:gravity="top"
        android:text="@string/please_sign"
        android:textAppearance="@style/please_sign"
        tools:ignore="RelativeOverlap" />

    <!-- sign in button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="316dp"
        android:backgroundTint="#546DF6"
        android:onClick="signInButton"
        android:text="@string/sign_in"
        tools:ignore="RelativeOverlap,UsingOnClickInXml"
        tools:targetApi="lollipop" />

    <!--password-->
    <EditText
        style="@style/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="247dp"
        android:background="@drawable/password_bo"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="#63666D"
        android:textColorHint="#63666D"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap,RtlSymmetry"
        android:paddingStart="15dp" />

    <!--username box-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="197dp"
        android:background="@drawable/username_bo"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="#63666D"
        android:textColorHint="#63666D"
        tools:ignore="RelativeOverlap,RtlSymmetry"
        android:layout_marginStart="40dp"
        android:paddingStart="15dp" />

    <!--forgot password-->
    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="293dp"
        android:gravity="top"
        android:onClick="forgetPassword"
        android:text="@string/forget_pass"
        android:textAppearance="@style/forget_pass"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="377dp"
        android:gravity="top"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_" />

    <!--signup button-->
    <TextView
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="247dp"
        android:layout_marginLeft="247dp"
        android:layout_marginTop="377dp"
        android:gravity="top"
        android:onClick="signupButton"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        tools:ignore="UsingOnClickInXml" />

    <!--google-->
    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="439dp"
        android:background="@drawable/google" />

    <!--google logo-->
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/googlelogo"
        tools:ignore="ContentDescription" />

    <!--facebook-->
    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="439dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/google" />

    <!--facbooklogo-->
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/facebooklogo"
        tools:ignore="ContentDescription" />
</RelativeLayout>
